--- a/params.config
+++ b/params.config
@@ -1,5 +1,5 @@
 # Simulation time
-TICKS = 100
+TICKS = 2000
 
 # The height of the field
 HEIGHT = 50
@@ -33,3 +33,9 @@ GRAIN_GROWTH_INTERVAL = 1
 
 # The amount of grain each time a patch can grow.
 NUM_GRAIN_GROWN = 4
+
+# Income tax rate settings
+TAX_MODE = true
+TAX_RATE_RICH = 0.3
+TAX_RATE_MIDDLE = 0.1
+TAX_RATE_POOR = 0.0
